WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49352
REGRESSION (
r68551
): Spaces shown at soft hyphens with complex justification
https://bugs.webkit.org/show_bug.cgi?id=49352
Summary
REGRESSION (r68551): Spaces shown at soft hyphens with complex justification
mitz
Reported
2010-11-10 16:18:45 PST
REGRESSION (
r68551
): Spaces shown at soft hyphens with complex justification
Attachments
Patch
(4.31 KB, patch)
2010-11-10 16:23 PST
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-11-10 16:21:55 PST
<
rdar://problem/8647848
>
mitz
Comment 2
2010-11-10 16:23:23 PST
Created
attachment 73553
[details]
Patch
mitz
Comment 3
2010-11-10 16:41:02 PST
Fixed in <
http://trac.webkit.org/changeset/71783
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug