<rdar://problem/8647848> REGRESSION (r68551): Spaces shown at soft hyphens with complex justification https://bugs.webkit.org/show_bug.cgi?id=49352

Reviewed by Simon Fraser.

WebCore: 

Test: fast/text/justification-padding-mid-word.html

* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances): Changed to add justification padding
and word spacing only at characters that are treated as space, instead of all characters that
use the space glyph (which includes characters treated as zero-width space as well).

LayoutTests: 

* fast/text/justification-padding-mid-word-expected.txt: Added.
* fast/text/justification-padding-mid-word.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@71783 bbb929c8-8fbe-4397-9dbb-9b2b20218538